# monitoring-engine

./: .gitignore  README.md  lambda_function.py  pyproject.toml
src/monitoring_engine/: main.py
src/monitoring_engine/alert/: __init__.py  alert_router.py  decision.py  dedup.py  formatter.py  recovered.py  recovery_notify.py  send_alert.py  sender.py  slack_alert.py  slack_payload.py
src/monitoring_engine/collector/: __init__.py  cpu_collector.py  disk_collector.py  log_collector.py  memory_collector.py  network_collector.py  network_rate.py  network_summary.py  process_collector.py
src/monitoring_engine/config/: config.yaml  config_loader.py  legacy_loader.py
src/monitoring_engine/core/: pipeline.py  runner.py  state.py
src/monitoring_engine/decision/: decision_service.py
src/monitoring_engine/detector/: __init__.py  anomaly_engine.py  base.py  brute_force_login_detector.py  detector.py  log_anomaly.py  manager.py  metric_anomaly.py  network_anomaly_detector.py  network_rate_detector.py  registry.py  reverse_shell_detector.py  suspicious_process_detector.py
src/monitoring_engine/handler/: lambda_handler.py
src/monitoring_engine/judge/: __init__.py  judge.py  thresholds.py
src/monitoring_engine/model/: incident.py
src/monitoring_engine/runner/: cli.py  responder_runner.py  run_pipeline.py
src/monitoring_engine/storage/: __init__.py  dynamodb_store.py  evidence_store.py  paths.py  state_store.py
src/monitoring_engine/utils/: metrics_utils.py
src/security_app/: main.py
tests/: test_auth_detector.py  test_process_detector.py
(+14 files in other folders)
