[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "monitoring-tool"
version = "0.1.0"
description = "Monitoring Tool"
readme = ""
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12",
  "pyyaml>=6.0",
  "requests>=2.31"
]

[project.scripts]
monitoring-tool = "monitoring_tool.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]